kubernetes/keel/01-namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: keel
  labels:
    app.kubernetes.io/name: keel
