kubernetes/keel/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: keel
  labels:
    app.kubernetes.io/name: keel
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 0 4 * * 5" # 4am Fri
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keel
    spec:
      serviceAccountName: keel
      terminationGracePeriodSeconds: 30
      containers:
        - name: keel
          image: keelhq/keel:0.19.1
          command: ["/bin/keel"]
          ports:
            - name: dashboard
              containerPort: 9300
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 10
            httpGet:
              path: /healthz
              port: dashboard
